<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="@dimen/data_elevation"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/score_LBL_place"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="2dp"
                android:text="@string/_1"
                android:textSize="@dimen/textSizeScore"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/score_LBL_score"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="2dp"
                android:text="@string/_1000"
                android:textSize="@dimen/textSizeScore"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/score_BTN_show"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/show"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>